xml to website template(invoice).

--- a/invoice_management/views/invoice_templates.xml
+++ b/invoice_management/views/invoice_templates.xml
@@ -191,13 +191,16 @@
                             var template = document.querySelector('.service-line-template').cloneNode(true);
                             template.classList.remove('service-line-template');
                             template.classList.add('service-line');
+                            template.style.display = 'flex';
 
                             // Add event listener to remove button
                             template.querySelector('.remove-line').addEventListener('click', function() {
                                 this.closest('.service-line').remove();
                             });
 
-                            document.querySelector('.service-lines-container').insertBefore(template, this.parentNode);
+                            // Insert before the button's parent div (which is the text-right div)
+                            var container = document.querySelector('.service-lines-container');
+                            container.insertBefore(template, document.querySelector('.service-lines-container .text-right'));
                         });
 
                         // Add product line
@@ -205,13 +208,16 @@
                             var template = document.querySelector('.product-line-template').cloneNode(true);
                             template.classList.remove('product-line-template');
                             template.classList.add('product-line');
+                            template.style.display = 'flex';
 
                             // Add event listener to remove button
                             template.querySelector('.remove-line').addEventListener('click', function() {
                                 this.closest('.product-line').remove();
                             });
 
-                            document.querySelector('.product-lines-container').insertBefore(template, this.parentNode);
+                            // Insert before the button's parent div (which is the text-right div)
+                            var container = document.querySelector('.product-lines-container');
+                            container.insertBefore(template, document.querySelector('.product-lines-container .text-right'));
                         });
 
                         // Add event listeners to existing remove buttons
